--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.password=
 
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
+springdoc.api-docs.enabled = true
+springdoc.swagger-ui.enabled = true
+springdoc.swagger-ui.path = /swagger-ui.html
+springdoc.pathsToMarch = /**
