--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/vollmed-api
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.jpa.show-sql = true
-spring.jpa.properties.hibernate.format_sql = true
+#spring.jpa.show-sql = true
+#spring.jpa.properties.hibernate.format_sql = true
 
 springdoc.api-docs.enabled = true
 springdoc.swagger-ui.enabled = true
