--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ springdoc.api-docs.enabled = true
 springdoc.swagger-ui.enabled = true
 springdoc.swagger-ui.path = /swagger-ui.html
 springdoc.pathsToMarch = /**
+
+api.security.secret=123456
+#${var_sistema:VALOR A INGRESAR EN CASO DE ERROR}
